RESOLVED FIXED263006
Crash caused by tabFocusesLinks property on macOS 10.12.3
https://bugs.webkit.org/show_bug.cgi?id=263006
Summary Crash caused by tabFocusesLinks property on macOS 10.12.3
Peter Xu
Reported 2023-10-11 04:12:36 PDT
Created attachment 468171 [details] Crash report screenshots #if !TARGET_OS_IPHONE /*! @property tabFocusesLinks @abstract If tabFocusesLinks is YES, the tab key will focus links and form controls. The Option key temporarily reverses this preference. */ @property (nonatomic) BOOL tabFocusesLinks API_AVAILABLE(macos(10.12.3)); #endif This property is marked available on macOS 10.12.3, and we just receive a crash report caused by this property. And we checked the source code of WebKit on macOS 10.12.3 from https://github.com/apple-oss-distributions/WebKit2/archive/WebKit2-7602.4.8.tar.gz, we just did not found this property. So I think you guys should update the API_AVAILABLE to macOS 10.12.4 to avoid crashes.
Attachments
Crash report screenshots (136.59 KB, image/png)
2023-10-11 04:12 PDT, Peter Xu
no flags
Elliott Williams
Comment 1 2023-10-11 15:55:27 PDT
Confirmed this property first appeared in macOS 10.12.4, not 10.12.3. Thanks for the report.
Elliott Williams
Comment 2 2023-10-11 16:03:13 PDT
EWS
Comment 3 2023-10-13 16:53:37 PDT
Committed 269329@main (044a95bedd14): <https://commits.webkit.org/269329@main> Reviewed commits have been landed. Closing PR #18963 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.