Fix WebKit declarations marked available in 10.12.3 which actually shipped in 10.12.4 https://bugs.webkit.org/show_bug.cgi?id=263006 rdar://116834122

Reviewed by Alexey Proskuryakov.

These declarations were pinned to the wrong macOS version years ago, in
https://commits.webkit.org/190395@main, because of a mistake we made
internally with the WK_MAC_TBA macro.

Fix declarations by looking at WebKit.framework headers from both
macOS releases, and ensuring availability declarations match.

* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.h:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKUIDelegatePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKLinkIconParameters.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKRemoteWebInspectorViewController.h:
* Source/WebKit/WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInEditingDelegate.h:
* Source/WebKit/WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInFrame.h:
* Source/WebKit/WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInRangeHandle.h:
* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextControllerPrivate.h:

Canonical link: https://commits.webkit.org/269329@main